Remove broken css and fix icon spacing for the appindicatorsupport extension.

--- a/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
+++ b/rules/themes/files/Geos-puavo-dark-panel/gnome-shell/gnome-shell.css
@@ -747,8 +747,7 @@ color: #fff;
       #panel .panel-button:active > .system-status-icon, #panel .panel-button:overview > .system-status-icon, #panel .panel-button:focus > .system-status-icon, #panel .panel-button:checked > .system-status-icon {
         icon-shadow: black 0 2px 2px; }
     #panel .panel-button .system-status-icon {
-      icon-size: 1.5§em;
-      padding: 0 9px; }
+      icon-size: 1.0em; }
     .unlock-screen #panel .panel-button, .login-screen #panel .panel-button, .lock-screen #panel .panel-button {
       color: white; }
       .unlock-screen #panel .panel-button:focus, .unlock-screen #panel .panel-button:hover, .unlock-screen #panel .panel-button:active, .login-screen #panel .panel-button:focus, .login-screen #panel .panel-button:hover, .login-screen #panel .panel-button:active, .lock-screen #panel .panel-button:focus, .lock-screen #panel .panel-button:hover, .lock-screen #panel .panel-button:active {
@@ -774,8 +773,7 @@ color: #fff;
 }
 
 .panel-button-indicator{
-    padding-left: 1em; 
-    padding-right: 1em; 
+    padding-left: 0.5em; 
     color:white;
 }
 
